# EKF_C

./: .gdbinit  CMakeLists.txt  CMakePresets.json  TODO.md  gdb_format.py  readme.md
Unity/src/: unity.h
include/: EKF.h  EKF_const.h  gsl_quaternion_float.h  jacobian.h  mag_correction.h  math_utils.h  rotations.h  utils_rotmatYawCorrectionJac.h  yawCorrectionJac.h
src/: CMakeLists.txt  EKF.c  gsl_quaternion_float.c  jacobian.c  mag_correction.c  math_utils.c  rotations.c  utils_rotmatYawCorrectionJac.c  yawCorrectionJac.c
test/: CMakeLists.txt  timing.c
tests/: CMakeLists.txt  EKF_test.c  EKF_test_primitives.c  jacobian_test.c  mag_correct_test.c  quaternion_test.c
utils/: plotResults.m  simbolicCalc.mlx
